update the code with the suggestions